--- a/index.html
+++ b/index.html
@@ -450,44 +450,67 @@
         </p>
 
         <div class="grid">
-          <!-- Banking -->
-          <article class="card banking" aria-label="Banking card">
-            <div class="head">
-              <h3>Banking</h3>
-              <span class="tag">High intent</span>
-            </div>
-            <p>Options that are usually easiest for newcomers (especially before you have Spanish documents sorted).</p>
-            <ul class="list">
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>Option A — Best for arriving</b>
-                    <small>Works well if you don’t have a Spanish address yet.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>Option B — Great for everyday spending</b>
-                    <small>Easy app, good cards, solid exchange rates.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>Option C — Local account (when ready)</b>
-                    <small>Useful for some Spanish direct debits and admin tasks.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-            </ul>
-          </article>
+          <!-- BANKING CARD (drop this inside your "Recommended essentials" grid) -->
+<article class="card banking" aria-label="Banking card">
+  <div class="head">
+    <h3>Banking</h3>
+    <span class="tag">High intent</span>
+  </div>
 
+  <p>Pick the right option depending on where you are in your move (arriving → daily use → local account).</p>
+
+  <ul class="list">
+    <!-- Option A -->
+    <li>
+      <a class="link" href="https://wise.com/" target="_blank" rel="noopener">
+        <div>
+          <b>Option A — Wise (Best for arriving)</b>
+          <small>Works well without a Spanish address. Great for day one: getting paid, moving money and using a card.</small>
+        </div>
+        <span class="arrow">↗</span>
+      </a>
+    </li>
+
+    <!-- Option B -->
+    <li>
+      <a class="link" href="https://www.revolut.com/" target="_blank" rel="noopener">
+        <div>
+          <b>Option B — Revolut (Great for everyday spending)</b>
+          <small>Easy app, reliable cards and good exchange rates. Popular for daily use once you’re settled.</small>
+        </div>
+        <span class="arrow">↗</span>
+      </a>
+    </li>
+
+    <!-- Optional: Alternative -->
+    <li>
+      <a class="link" href="https://n26.com/" target="_blank" rel="noopener">
+        <div>
+          <b>Alternative — N26 (Simple euro banking)</b>
+          <small>App-first euro account that many newcomers use for everyday banking.</small>
+        </div>
+        <span class="arrow">↗</span>
+      </a>
+    </li>
+
+    <!-- Option C -->
+    <li>
+      <a class="link" href="https://www.ing.es/" target="_blank" rel="noopener">
+        <div>
+          <b>Option C — ING Spain (Local account, when ready)</b>
+          <small>Best once you already live in Spain and have paperwork sorted (NIE/address). Useful for rent, utilities and direct debits.</small>
+        </div>
+        <span class="arrow">↗</span>
+      </a>
+    </li>
+  </ul>
+
+  <p class="fineprint" style="margin-top:10px;">
+    Tip: If you’re arriving soon, start with Option A. Add a local Spanish account later if you need it for direct debits.
+  </p>
+</article>
+
+          
           <!-- SIM/eSIM -->
           <article class="card mobile" aria-label="SIM and eSIM card">
             <div class="head">
