--- a/index.html
+++ b/index.html
@@ -462,14 +462,17 @@
   <ul class="list">
     <!-- Option A -->
     <li>
-      <a class="link" href="https://wise.com/" target="_blank" rel="noopener">
-        <div>
-          <b>Option A — Wise (Best for arriving)</b>
-          <small>Works well without a Spanish address. Great for day one: getting paid, moving money and using a card.</small>
-        </div>
-        <span class="arrow">↗</span>
-      </a>
-    </li>
+  <a class="link" href="https://wise.com/invite/ihpc/alejandrob252" target="_blank" rel="noopener">
+    <div>
+      <b>Option A — Wise (Best for arriving)</b>
+      <small>Works well without a Spanish address. Ideal for day one: get paid, move money and use a card before and after you arrive.</small>
+      <small style="display:block; margin-top:6px; color: rgba(183,194,226,.75);">
+        Note: Wise may offer referral perks (e.g., a free card or fee-free transfers). Offers can change.
+      </small>
+    </div>
+    <span class="arrow">→ Start with Wise</span>
+  </a>
+</li>
 
     <!-- Option B -->
     <li>
