--- a/index.html
+++ b/index.html
@@ -461,16 +461,18 @@
 
   <ul class="list">
     <!-- Option A -->
-    <li>
+  <li>
   <a class="link" href="https://wise.com/invite/ihpc/alejandrob252" target="_blank" rel="noopener">
     <div>
       <b>Option A — Wise (Best for arriving)</b>
-      <small>Works well without a Spanish address. Ideal for day one: get paid, move money and use a card before and after you arrive.</small>
-      <small style="display:block; margin-top:6px; color: rgba(183,194,226,.75);">
+      <small>
+        Works well without a Spanish address. Ideal for day one: get paid, move money and use a card before and after you arrive.
+      </small>
+      <small class="note">
         Note: Wise may offer referral perks (e.g., a free card or fee-free transfers). Offers can change.
       </small>
     </div>
-    <span class="arrow">→ Start with Wise</span>
+    <span class="arrow">→</span>
   </a>
 </li>
 
