--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
     <!-- Option B -->
     <li>
-      <a class="link" href="https://www.revolut.com/" target="_blank" rel="noopener">
+      <a class="link" href="https://revolut.com/referral/?referral-code=alejanjk2!FEB1-26-VR-GB-MDL-CTRL&geo-redirect" target="_blank" rel="noopener">
         <div>
           <b>Option B — Revolut (Great for everyday spending)</b>
           <small>Easy app, reliable cards and good exchange rates. Popular for daily use once you’re settled.</small>
