--- a/index.html
+++ b/index.html
@@ -333,6 +333,13 @@
     }
     footer a{color:var(--muted)}
     .divider{height:1px; background:var(--line); margin:16px 0;}
+
+    .link .note{
+  display:block;
+  margin-top:6px;
+  font-size:12px;
+  color: var(--muted);
+}
   </style>
 </head>
 
@@ -499,22 +506,85 @@
     </li>
 
     <!-- Option C -->
-    <li>
-      <a class="link" href="https://www.ing.es/" target="_blank" rel="noopener">
-        <div>
-          <b>Option C — ING Spain (Local account, when ready)</b>
-          <small>Best once you already live in Spain and have paperwork sorted (NIE/address). Useful for rent, utilities and direct debits.</small>
-        </div>
-        <span class="arrow">↗</span>
-      </a>
-    </li>
+   <li>
+  <a class="link" href="#ing-details">
+    <div>
+      <b>Option C — ING Spain (Local account, when ready)</b>
+      <small>
+        Useful for Spanish direct debits, rent and official admin tasks once you live in Spain and have your paperwork sorted.
+      </small>
+    </div>
+    <span class="arrow">→</span>
+  </a>
+</li>
   </ul>
 
   <p class="fineprint" style="margin-top:10px;">
     Tip: If you’re arriving soon, start with Option A. Add a local Spanish account later if you need it for direct debits.
   </p>
 </article>
+<!-- =========================
+     ING DETAILS (SECOND LEVEL)
+     Paste this right AFTER the "Recommended essentials" section
+     (or anywhere below it). The Banking card above links here.
+========================= -->
+<section id="ing-details" class="section section-alt">
+  <h2>ING Spain — requirements & optional bonus</h2>
 
+  <p>
+    ING is a solid Spanish bank once you’re settled. It’s mainly useful for local payments such as rent,
+    utilities and official direct debits.
+  </p>
+
+  <p>
+    Some ING promotions (such as cash bonuses) are optional and come with specific requirements.
+    If you want to qualify for the current ING bonus, you usually need to:
+  </p>
+
+  <ul class="list">
+    <li>
+      <div class="link" style="cursor:default;">
+        <div>
+          <b>Cuenta Nómina</b>
+          <small>Open a salary account with ING.</small>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="link" style="cursor:default;">
+        <div>
+          <b>Spanish ID</b>
+          <small>DNI or NIE required.</small>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="link" style="cursor:default;">
+        <div>
+          <b>Monthly income</b>
+          <small>Bring in at least 700 € per month (salary, pension, benefits or transfers).</small>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="link" style="cursor:default;">
+        <div>
+          <b>Promo code</b>
+          <small>Enter a promotional code during sign-up.</small>
+        </div>
+      </div>
+    </li>
+  </ul>
+
+  <p class="fineprint" style="margin-top:12px;">
+    Important: you can still open an ING account <b>without the bonus</b> if these conditions don’t apply to you.
+  </p>
+
+  <div class="cta-row" style="margin-top:14px;">
+    <a class="btn" href="https://www.ing.es/" target="_blank" rel="noopener">Visit ING Spain (official site)</a>
+    <a class="btn" href="#recommended">Back to essentials</a>
+  </div>
+</section>
           
           <!-- SIM/eSIM -->
           <article class="card mobile" aria-label="SIM and eSIM card">
