--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 
     <!-- Option C -->
    <li>
-  <a class="link" href="#ing-details">
+  <a class="link" href="https://www.ing.es" target="_blank" rel="noopener">
     <div>
       <b>Option C — ING Spain (Local account, when ready)</b>
       <small>
