--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
             <p>Get connected before you land, or the same day you arrive. Great for short or long stays.</p>
             <ul class="list">
               <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
+                <a class="link" href="https://esim.holafly.com/" target="_blank" rel="noopener">
                   <div>
                     <b>eSIM — Activate in minutes</b>
                     <small>Ideal for day one. No shop visit needed.</small>
