--- a/index.html
+++ b/index.html
@@ -527,14 +527,15 @@
             <p>Get connected before you land, or the same day you arrive. Great for short or long stays.</p>
             <ul class="list">
               <li>
-                <a class="link" href="https://esim.holafly.com/" target="_blank" rel="noopener">
-                  <div>
-                    <b>eSIM — Activate in minutes</b>
-                    <small>Ideal for day one. No shop visit needed.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
+  <a class="link" href="https://esim.holafly.com/" target="_blank" rel="noopener">
+    <div>
+      <b>eSIM — Activate in minutes</b>
+      <small>Ideal for day one. No shop visit needed.</small>
+      <small class="note">Holafly eSIMs offer unlimited data plans for travellers.</small>
+    </div>
+    <span class="arrow">↗</span>
+  </a>
+</li>
               <li>
                 <a class="link" href="#" target="_blank" rel="noopener">
                   <div>
