--- a/index.html
+++ b/index.html
@@ -536,26 +536,31 @@
     <span class="arrow">↗</span>
   </a>
 </li>
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>SIM — Best value monthly</b>
-                    <small>For longer stays (1–12 months).</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>Home internet — when you have housing</b>
-                    <small>Fiber options once your address is fixed.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-            </ul>
-          </article>
+             <li>
+      <a class="link" href="https://www.digimobil.es/" target="_blank" rel="noopener">
+        <div>
+          <b>SIM — Best value monthly</b>
+          <small>For longer stays (1–12 months). Good value mobile plans once you’re in Spain.</small>
+          <small class="note">Requires a physical SIM (shop visit or delivery address).</small>
+        </div>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+             <li>
+      <a class="link" href="https://o2online.es/" target="_blank" rel="noopener">
+        <div>
+          <b>Home internet — when you have housing</b>
+          <small>Fiber options once your address is fixed.</small>
+        </div>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+  </ul>
+
+  <p class="fineprint" style="margin-top:10px;">
+    Tip: start with an eSIM for day one. Switch to a monthly SIM once you’re settled.
+  </p>
+</article>
 
           <!-- Insurance -->
           <article class="card insurance" aria-label="Insurance card">
