--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
               <li>
   <a class="link" href="https://esim.holafly.com/" target="_blank" rel="noopener">
     <div>
-      <b>eSIM — Activate in minutes</b>
+      <b>Holafly — eSIM (Activate in minutes)</b>
       <small>Ideal for day one. No shop visit needed.</small>
       <small class="note">Holafly eSIMs offer unlimited data plans for travellers.</small>
     </div>
@@ -539,7 +539,7 @@
              <li>
       <a class="link" href="https://www.digimobil.es/" target="_blank" rel="noopener">
         <div>
-          <b>SIM — Best value monthly</b>
+          <b>DIGI — SIM (Best value monthly)</b>
           <small>For longer stays (1–12 months). Good value mobile plans once you’re in Spain.</small>
           <small class="note">Requires a physical SIM (shop visit or delivery address).</small>
         </div>
@@ -549,8 +549,10 @@
              <li>
       <a class="link" href="https://o2online.es/" target="_blank" rel="noopener">
         <div>
-          <b>Home internet — when you have housing</b>
-          <small>Fiber options once your address is fixed.</small>
+        <b>O2 — Home internet (when you have housing)</b>
+          <small class="note">
+        Better value if you bundle mobile + fiber: <span>DIGI</span>.
+      </small>
         </div>
         <span class="arrow">→</span>
       </a>
