--- a/index.html
+++ b/index.html
@@ -572,35 +572,49 @@
             </div>
             <p>Pick the type that matches your situation (travel, expat health, or visa requirements).</p>
             <ul class="list">
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>Travel insurance — short stays</b>
-                    <small>Good for trips, emergencies, and peace of mind.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>Expat health insurance — longer stays</b>
-                    <small>Better if you’re settling or applying for visas.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>Private health (Spain) — resident style</b>
-                    <small>Popular for families and visa paperwork.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-            </ul>
-          </article>
+              <ul class="list">
+    <!-- Travel insurance -->
+    <li>
+      <a class="link" href="https://safetywing.com/" target="_blank" rel="noopener">
+        <div>
+          <b>SafetyWing — Travel insurance (short stays)</b>
+          <small>Good for trips, emergencies, and peace of mind.</small>
+          <small class="note">Often used by travellers and digital nomads.</small>
+        </div>
+        <span class="arrow">↗</span>
+      </a>
+    </li>
+
+    <!-- Expat health insurance -->
+    <li>
+      <a class="link" href="https://www.cignaglobal.com/" target="_blank" rel="noopener">
+        <div>
+          <b>Cigna — Expat health insurance (longer stays)</b>
+          <small>Better if you’re settling in or applying for visas.</small>
+          <small class="note">International coverage with visa-friendly policies.</small>
+        </div>
+        <span class="arrow">↗</span>
+      </a>
+    </li>
+
+    <!-- Private health Spain -->
+    <li>
+      <a class="link" href="https://www.sanitas.es/" target="_blank" rel="noopener">
+        <div>
+          <b>Sanitas — Private health (Spain)</b>
+          <small>Popular for families and Spanish visa paperwork.</small>
+          <small class="note">Resident-style private healthcare within Spain.</small>
+        </div>
+        <span class="arrow">↗</span>
+      </a>
+    </li>
+  </ul>
+
+  <p class="fineprint" style="margin-top:10px;">
+    Tip: travel insurance is usually enough for short stays. For visas, check requirements carefully.
+  </p>
+</article>
+           
 
           <!-- Paperwork -->
           <article class="card paperwork" aria-label="Paperwork help card">
