--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
         <div>
           <b>SafetyWing — Travel insurance (short stays)</b>
           <small>Good for trips, emergencies, and peace of mind.</small>
-          <small class="note">Often used by travellers and digital nomads.</small>
+          <small class="note">Website and support available in English.</small>
         </div>
         <span class="arrow">↗</span>
       </a>
@@ -591,7 +591,7 @@
         <div>
           <b>Cigna — Expat health insurance (longer stays)</b>
           <small>Better if you’re settling in or applying for visas.</small>
-          <small class="note">International coverage with visa-friendly policies.</small>
+          <small class="note">International policies with English documentation.</small>
         </div>
         <span class="arrow">↗</span>
       </a>
@@ -603,7 +603,9 @@
         <div>
           <b>Sanitas — Private health (Spain)</b>
           <small>Popular for families and Spanish visa paperwork.</small>
-          <small class="note">Resident-style private healthcare within Spain.</small>
+          <small class="note">
+            The website and contracts are in Spanish. Widely used by expats.
+          </small>
         </div>
         <span class="arrow">↗</span>
       </a>
@@ -611,10 +613,9 @@
   </ul>
 
   <p class="fineprint" style="margin-top:10px;">
-    Tip: travel insurance is usually enough for short stays. For visas, check requirements carefully.
+    Tip: travel insurance is usually enough for short stays. Long-term visas often require specific health coverage.
   </p>
-</article>
-           
+</article>       
 
           <!-- Paperwork -->
           <article class="card paperwork" aria-label="Paperwork help card">
