--- a/index.html
+++ b/index.html
@@ -618,42 +618,55 @@
 </article>       
 
           <!-- Paperwork -->
-          <article class="card paperwork" aria-label="Paperwork help card">
-            <div class="head">
-              <h3>Paperwork help</h3>
-              <span class="tag">Time-saver</span>
-            </div>
-            <p>When you want it done properly (and in English). Great if you’re busy or on a timeline.</p>
-            <ul class="list">
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>NIE / TIE guidance</b>
-                    <small>Step-by-step help + appointment strategy.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>Tax advisor (expat-friendly)</b>
-                    <small>For Beckham Law, double taxation, filings.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-              <li>
-                <a class="link" href="#" target="_blank" rel="noopener">
-                  <div>
-                    <b>Autónomo / freelance setup</b>
-                    <small>If you’ll invoice from Spain.</small>
-                  </div>
-                  <span class="arrow">↗</span>
-                </a>
-              </li>
-            </ul>
-          </article>
+          <article class="card paperwork" aria-label="Paperwork help">
+  <div class="head">
+    <h3>Paperwork help</h3>
+    <span class="tag">Time-saver</span>
+  </div>
+
+  <p>
+    DIY guidance when it’s simple. Professional help when it matters — in English.
+  </p>
+
+  <ul class="list">
+    <li>
+      <a class="link" href="/paperwork/nie-tie.html">
+        <div>
+          <b>NIE / TIE guidance</b>
+          <small>Step-by-step help + appointment strategy.</small>
+          <small class="note">Guide in English. You’ll do the booking — or I’ll connect you with a trusted service if needed.</small>
+        </div>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+
+    <li>
+      <a class="link" href="/paperwork/tax-advisor.html">
+        <div>
+          <b>Tax advisor (expat-friendly)</b>
+          <small>For Beckham Law, double taxation and filings.</small>
+          <small class="note">I can point you to vetted English-speaking professionals for your situation.</small>
+        </div>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+
+    <li>
+      <a class="link" href="/paperwork/autonomo.html">
+        <div>
+          <b>Autónomo / freelance setup</b>
+          <small>If you’ll invoice from Spain.</small>
+          <small class="note">Best handled by a gestor — I’ll connect you and help you choose the right path.</small>
+        </div>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+  </ul>
+
+  <p class="fineprint" style="margin-top:10px;">
+    I’m not a lawyer or tax advisor. This site helps you choose the right path and find trusted help.
+  </p>
+</article>
 
           <!-- Optional: Paid call -->
           <article class="card call" aria-label="Starter call card" style="grid-column: span 6;">
