--- a/paperwork/index.html
+++ b/paperwork/index.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Paperwork help — Spain Starter Kit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="English guidance for Spanish paperwork. Decide what to do yourself and when to use professional help.">
 
+  <!-- Usa tu mismo CSS / variables -->
+  <link rel="stylesheet" href="/style.css">
+</head>
+
+<body>
+
+  <header class="page-header">
+    <a href="/" class="back">← Back to essentials</a>
+    <h1>Paperwork help</h1>
+    <p class="subtitle">
+      DIY guidance when it’s simple. Professional help when it matters.
+    </p>
+  </header>
+
+  <main class="page-content">
+<section>
+  <h2>How this works</h2>
+  <p>
+    Spanish paperwork can be simple — or surprisingly complex.
+    This section helps you decide what you can handle yourself and when it’s better
+    to delegate to professionals.
+  </p>
+</section>
+
+<section>
+  <h2>Choose a topic</h2>
+
+  <ul class="list">
+    <li>
+      <a class="link" href="/paperwork/nie-tie.html">
+        <div>
+          <b>NIE / TIE guidance</b>
+          <small>Understand the process and appointment strategy.</small>
+        </div>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+
+    <li>
+      <a class="link" href="/paperwork/tax-advisor.html">
+        <div>
+          <b>Tax advisor (expat-friendly)</b>
+          <small>When professional tax help is the right move.</small>
+        </div>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+
+    <li>
+      <a class="link" href="/paperwork/autonomo.html">
+        <div>
+          <b>Autónomo / freelance setup</b>
+          <small>If you plan to invoice from Spain.</small>
+        </div>
+        <span class="arrow">→</span>
+      </a>
+    </li>
+  </ul>
+</section>
+  
+  </main>
+
+  <footer>
+    <div class="divider"></div>
+    <p class="fineprint">
+      This site provides general guidance only and does not offer legal or tax advice.
+    </p>
+  </footer>
+
+</body>
+</html>
