--- a/paperwork/tax-advisor.html
+++ b/paperwork/tax-advisor.html
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Paperwork help — Spain Starter Kit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="English guidance for Spanish paperwork. Decide what to do yourself and when to use professional help.">
+
+  <!-- Usa tu mismo CSS / variables -->
+  <link rel="stylesheet" href="/style.css">
+</head>
+
+<body>
+
+  <header class="page-header">
+    <a href="/" class="back">← Back to essentials</a>
+    <h1>Paperwork help</h1>
+    <p class="subtitle">
+      DIY guidance when it’s simple. Professional help when it matters.
+    </p>
+  </header>
+
+  <main class="page-content">
+<section>
+  <h2>When you should use a tax advisor</h2>
+  <p>
+    Spanish tax rules can get complex quickly, especially for expats with income
+    or assets in multiple countries.
+  </p>
+</section>
+
+<section>
+  <h3>Common situations that need advice</h3>
+  <ul>
+    <li>Beckham Law eligibility</li>
+    <li>Double taxation questions</li>
+    <li>Remote work or foreign income</li>
+  </ul>
+</section>
+
+<section>
+  <h3>What I do here</h3>
+  <p>
+    I don’t provide tax advice. I help you understand when you need a professional
+    and connect you with expat-friendly advisors who work in English.
+  </p>
+</section>
+
+<p class="fineprint">
+  Advisor matching and referrals coming soon.
+</p>
+  
+  </main>
+
+  <footer>
+    <div class="divider"></div>
+    <p class="fineprint">
+      This site provides general guidance only and does not offer legal or tax advice.
+    </p>
+  </footer>
+
+</body>
+</html>
 
