--- a/paperwork/index.html
+++ b/paperwork/index.html
@@ -6,398 +6,82 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="English guidance for Spanish paperwork. Decide what to do yourself and when to use professional help.">
 
-
+  <!-- Fallback layout (prevents edge-to-edge text even if your main CSS is missing/partial) -->
   <style>
-    :root{
-      --bg:#0b1220;
-      --panel:#0f1a33;
-      --card:#0f1a33;
-      --text:#eaf0ff;
-      --muted:#b7c2e2;
-      --soft:#7f8bb0;
-      --line:rgba(255,255,255,.12);
-      --brand:#6ee7ff;
-      --brand2:#9b8cff;
-      --ok:#34d399;
-      --warn:#fbbf24;
-      --shadow: 0 20px 60px rgba(0,0,0,.35);
-      --radius: 18px;
-      --radius2: 22px;
-      --max: 1120px;
-      --font: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family:var(--font);
-      color:var(--text);
-      background:
-        radial-gradient(1100px 600px at 15% 10%, rgba(110,231,255,.12), transparent 55%),
-        radial-gradient(900px 500px at 90% 10%, rgba(155,140,255,.12), transparent 55%),
-        radial-gradient(700px 450px at 50% 85%, rgba(52,211,153,.10), transparent 60%),
-        var(--bg);
-      line-height:1.55;
-    }
-    a{color:inherit}
-    .wrap{max-width:var(--max); margin:0 auto; padding:24px}
-    .topbar{
-      display:flex; align-items:center; justify-content:space-between;
-      gap:16px;
-      padding:14px 16px;
-      border:1px solid var(--line);
-      border-radius:999px;
-      background:rgba(15,26,51,.55);
-      backdrop-filter: blur(10px);
-    }
-    .brand{
-      display:flex; align-items:center; gap:12px; text-decoration:none;
-      font-weight:700; letter-spacing:.2px;
-    }
-    .logo{
-      width:34px; height:34px; border-radius:12px;
-      background: linear-gradient(135deg, var(--brand), var(--brand2));
-      box-shadow: 0 12px 28px rgba(110,231,255,.18);
-    }
-    .nav{
-      display:flex; align-items:center; gap:14px; flex-wrap:wrap;
-      font-size:14px; color:var(--muted);
-    }
-    .nav a{ text-decoration:none; padding:8px 10px; border-radius:999px; border:1px solid transparent;}
-    .nav a:hover{ border-color:var(--line); color:var(--text); background:rgba(255,255,255,.04);}
-    .btn{
-      display:inline-flex; align-items:center; justify-content:center; gap:10px;
-      padding:12px 16px;
-      border-radius:999px;
-      border:1px solid var(--line);
-      text-decoration:none;
-      font-weight:700;
-      color:var(--text);
-      background:rgba(255,255,255,.05);
-      transition: transform .15s ease, background .15s ease, border-color .15s ease;
-      white-space:nowrap;
-      cursor:pointer;
-    }
-    .btn:hover{ transform: translateY(-1px); background:rgba(255,255,255,.08); border-color:rgba(255,255,255,.18); }
-    .btn.primary{
-      border:none;
-      background: linear-gradient(135deg, var(--brand), var(--brand2));
-      color:#0b1220;
-      box-shadow: 0 18px 40px rgba(110,231,255,.18);
-    }
-    .btn.primary:hover{ filter: brightness(1.03); }
-
-    /* Hero */
-    .hero{
-      padding:44px 0 22px;
-      display:grid;
-      grid-template-columns: 1.1fr .9fr;
-      gap:26px;
-      align-items:stretch;
-    }
-    @media (max-width: 980px){
-      .hero{grid-template-columns:1fr; padding-top:26px;}
-    }
-    .hero-card{
-      border:1px solid var(--line);
-      border-radius: var(--radius2);
-      background: rgba(15,26,51,.55);
-      box-shadow: var(--shadow);
-      overflow:hidden;
-      position:relative;
-    }
-    .hero-inner{padding:28px 26px 26px;}
-    .badge{
-      display:inline-flex; align-items:center; gap:8px;
-      font-size:13px;
-      color:var(--muted);
-      border:1px solid var(--line);
-      background:rgba(255,255,255,.03);
-      padding:8px 12px;
-      border-radius:999px;
-    }
-    .dot{width:9px; height:9px; border-radius:999px; background:var(--ok); box-shadow:0 0 0 6px rgba(52,211,153,.12);}
-    h1{
-      margin:14px 0 8px;
-      font-size:44px;
-      line-height:1.12;
-      letter-spacing:-.6px;
-    }
-    @media (max-width: 520px){ h1{font-size:36px;} }
-    .lead{
-      margin:0 0 16px;
-      color:var(--muted);
-      font-size:17px;
-      max-width: 52ch;
-    }
-    .cta-row{
-      display:flex;
-      gap:12px;
-      flex-wrap:wrap;
-      margin-top:18px;
-      align-items:center;
-    }
-    .fineprint{
-      margin-top:12px;
-      font-size:13px;
-      color:var(--soft);
-    }
-    .hero-side{
-      border:1px solid var(--line);
-      border-radius: var(--radius2);
-      background: rgba(15,26,51,.45);
-      box-shadow: var(--shadow);
-      padding:22px;
-      display:flex;
-      flex-direction:column;
-      gap:14px;
-    }
-    .side-title{font-weight:800; font-size:16px;}
-    .side-list{display:grid; gap:10px; margin:0; padding:0; list-style:none;}
-    .side-item{
-      border:1px solid var(--line);
-      background: rgba(255,255,255,.03);
-      border-radius: 16px;
-      padding:12px 12px;
-      display:flex;
-      gap:12px;
-      align-items:flex-start;
-    }
-    .icon{
-      width:34px; height:34px; border-radius:14px;
-      border:1px solid var(--line);
-      background: linear-gradient(135deg, rgba(110,231,255,.18), rgba(155,140,255,.12));
-      display:flex; align-items:center; justify-content:center;
-      flex:0 0 auto;
-    }
-    .side-item b{display:block; margin-bottom:2px;}
-    .side-item span{color:var(--muted); font-size:14px;}
-    .pillrow{display:flex; gap:10px; flex-wrap:wrap; margin-top:4px;}
-    .pill{
-      font-size:12px; color:var(--muted);
-      padding:7px 10px;
-      border-radius:999px;
-      border:1px solid var(--line);
-      background:rgba(255,255,255,.03);
-    }
-
-    /* Sections */
-    .section{padding:18px 0 10px;}
-    .section h2{
-      font-size:22px;
-      letter-spacing:-.2px;
-      margin:0 0 8px;
-    }
-    .section p{margin:0 0 14px; color:var(--muted);}
-
-    /* NEW: alternating section backgrounds */
-    .section-alt{
-      background: linear-gradient(180deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01));
-      border-top: 1px solid rgba(255,255,255,0.06);
-      border-bottom: 1px solid rgba(255,255,255,0.06);
-      border-radius: 22px;
-      padding-left: 18px;
-      padding-right: 18px;
-    }
-    @media (max-width: 640px){
-      .section-alt{padding-left: 12px; padding-right: 12px;}
-    }
-
-    .grid{
-      display:grid;
-      grid-template-columns: repeat(12, 1fr);
-      gap:14px;
-      align-items:stretch; /* NEW */
-    }
-    .card{
-      grid-column: span 4;
-      border:1px solid var(--line);
-      border-radius: var(--radius);
-      background: rgba(15,26,51,.50);
-      box-shadow: 0 16px 40px rgba(0,0,0,.25);
-      padding:16px;
-      display:flex;
-      flex-direction:column;
-      gap:10px;
-      min-height: 210px;
-      border-left: 3px solid rgba(255,255,255,0.08); /* NEW */
-    }
-    @media (max-width: 980px){ .card{grid-column: span 6;} }
-    @media (max-width: 640px){ .card{grid-column: span 12;} }
-
-    /* NEW: subtle color-tinted cards by category */
-    .card.banking{
-      background: linear-gradient(135deg, rgba(110,231,255,0.10), rgba(15,26,51,0.85));
-      border-left-color: rgba(110,231,255,0.6);
-    }
-    .card.mobile{
-      background: linear-gradient(135deg, rgba(155,140,255,0.10), rgba(15,26,51,0.85));
-      border-left-color: rgba(155,140,255,0.6);
-    }
-    .card.insurance{
-      background: linear-gradient(135deg, rgba(52,211,153,0.10), rgba(15,26,51,0.85));
-      border-left-color: rgba(52,211,153,0.6);
-    }
-    .card.paperwork{
-      background: linear-gradient(135deg, rgba(251,191,36,0.10), rgba(15,26,51,0.85));
-      border-left-color: rgba(251,191,36,0.6);
-    }
-    .card.call{
-      background: linear-gradient(135deg, rgba(110,231,255,0.08), rgba(155,140,255,0.07), rgba(15,26,51,0.85));
-      border-left-color: rgba(110,231,255,0.55);
-    }
-    .card.city{
-      background: linear-gradient(135deg, rgba(155,140,255,0.08), rgba(15,26,51,0.85));
-      border-left-color: rgba(155,140,255,0.55);
-    }
-    .card.info{
-      background: linear-gradient(135deg, rgba(255,255,255,0.04), rgba(15,26,51,0.85));
-      border-left-color: rgba(255,255,255,0.18);
-    }
-
-    .card .head{display:flex; align-items:center; justify-content:space-between; gap:10px;}
-    .tag{
-      font-size:12px;
-      color:#0b1220;
-      font-weight:800;
-      padding:6px 10px;
-      border-radius:999px;
-      background: linear-gradient(135deg, rgba(110,231,255,.95), rgba(155,140,255,.9));
-    }
-    .card h3{margin:0; font-size:16px; letter-spacing:-.1px;}
-    .card p{margin:0; color:var(--muted); font-size:14px;}
-    .list{
-      margin:0; padding:0; list-style:none;
-      display:grid; gap:8px;
-    }
-    .link{
-      display:flex; align-items:center; justify-content:space-between; gap:10px;
-      padding:10px 12px;
-      border-radius:14px;
-      border:1px solid var(--line);
-      text-decoration:none;
-      background: rgba(255,255,255,.03);
-      transition: transform .15s ease, background .15s ease, border-color .15s ease;
-    }
-    .link:hover{
-      transform: translateY(-1px);
-      background: rgba(255,255,255,.06);
-      border-color: rgba(255,255,255,.18);
-    }
-    .link small{color:var(--soft); display:block; margin-top:2px;}
-    .arrow{opacity:.7}
-
-    /* Email box */
-    .signup{
-      margin:18px 0 26px;
-      border:1px solid var(--line);
-      border-radius: var(--radius2);
-      background: rgba(15,26,51,.55);
-      box-shadow: var(--shadow);
-      overflow:hidden;
-    }
-    .signup-inner{
-      padding:18px 18px;
-      display:flex;
-      flex-wrap:wrap;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-    }
-    .signup strong{font-size:16px}
-    .signup span{color:var(--muted); font-size:14px}
-    form{display:flex; gap:10px; flex-wrap:wrap;}
-    input[type="email"]{
-      padding:12px 14px;
-      border-radius:999px;
-      border:1px solid var(--line);
-      background: rgba(255,255,255,.04);
-      color:var(--text);
-      min-width: 260px;
-      outline:none;
-    }
-    input[type="email"]::placeholder{color: rgba(183,194,226,.7);}
-    .mini{
-      font-size:12px; color:var(--soft);
-      padding:0 18px 16px;
-    }
-
-    /* Footer */
-    footer{
-      padding:22px 0 34px;
-      color:var(--soft);
-      font-size:13px;
-    }
-    footer a{color:var(--muted)}
-    .divider{height:1px; background:var(--line); margin:16px 0;}
+    .container{max-width:1100px;margin:0 auto;padding:0 20px;}
+    .page-header{padding:28px 0 6px;}
+    .page-content{padding:18px 0 56px;}
+    .back{display:inline-block;margin-bottom:14px;}
+    h1{margin:10px 0 8px;}
+    .subtitle{margin:0 0 18px;}
+    section{margin:22px 0;}
   </style>
 
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
+  <div class="container">
+    <header class="page-header">
+      <a href="/" class="back">← Back to essentials</a>
+      <h1>Paperwork help</h1>
+      <p class="subtitle">DIY guidance when it’s simple. Professional help when it matters — in English.</p>
+    </header>
 
-  <header class="page-header">
-    <a href="/" class="back">← Back to essentials</a>
-    <h1>Paperwork help</h1>
-    <p class="subtitle">
-      DIY guidance when it’s simple. Professional help when it matters.
-    </p>
-  </header>
+    <main class="page-content">
+      <section>
+        <h2>How this works</h2>
+        <p>
+          Some Spanish paperwork is simple — others are time-sensitive or easy to get wrong.
+          This section helps you choose the right path: do it yourself with clear guidance, or delegate to professionals.
+        </p>
+      </section>
 
-  <main class="page-content">
-<section>
-  <h2>How this works</h2>
-  <p>
-    Spanish paperwork can be simple — or surprisingly complex.
-    This section helps you decide what you can handle yourself and when it’s better
-    to delegate to professionals.
-  </p>
-</section>
+      <section>
+        <h2>Choose a topic</h2>
 
-<section>
-  <h2>Choose a topic</h2>
+        <ul class="list">
+          <li>
+            <a class="link" href="/paperwork/nie-tie.html">
+              <div>
+                <b>NIE / TIE guidance</b>
+                <small>Understand what you need + appointment strategy.</small>
+              </div>
+              <span class="arrow">→</span>
+            </a>
+          </li>
 
-  <ul class="list">
-    <li>
-      <a class="link" href="/paperwork/nie-tie.html">
-        <div>
-          <b>NIE / TIE guidance</b>
-          <small>Understand the process and appointment strategy.</small>
-        </div>
-        <span class="arrow">→</span>
-      </a>
-    </li>
+          <li>
+            <a class="link" href="/paperwork/tax-advisor.html">
+              <div>
+                <b>Tax advisor (expat-friendly)</b>
+                <small>Beckham Law, double taxation, filings.</small>
+              </div>
+              <span class="arrow">→</span>
+            </a>
+          </li>
 
-    <li>
-      <a class="link" href="/paperwork/tax-advisor.html">
-        <div>
-          <b>Tax advisor (expat-friendly)</b>
-          <small>When professional tax help is the right move.</small>
-        </div>
-        <span class="arrow">→</span>
-      </a>
-    </li>
+          <li>
+            <a class="link" href="/paperwork/autonomo.html">
+              <div>
+                <b>Autónomo / freelance setup</b>
+                <small>If you’ll invoice from Spain.</small>
+              </div>
+              <span class="arrow">→</span>
+            </a>
+          </li>
+        </ul>
+      </section>
 
-    <li>
-      <a class="link" href="/paperwork/autonomo.html">
-        <div>
-          <b>Autónomo / freelance setup</b>
-          <small>If you plan to invoice from Spain.</small>
-        </div>
-        <span class="arrow">→</span>
-      </a>
-    </li>
-  </ul>
-</section>
-  
-  </main>
+      <p class="fineprint">
+        This site provides general guidance only and does not offer legal or tax advice.
+      </p>
+    </main>
 
-  <footer>
-    <div class="divider"></div>
-    <p class="fineprint">
-      This site provides general guidance only and does not offer legal or tax advice.
-    </p>
-  </footer>
-
+    <footer>
+      <div class="divider"></div>
+      <p class="fineprint">© SpainStarterKit.com</p>
+    </footer>
+  </div>
 </body>
 </html>
