--- a/paperwork/autonomo.html
+++ b/paperwork/autonomo.html
@@ -2,23 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Autónomo setup — Spain Starter Kit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Autónomo setup in Spain: why most people delegate and how to choose the right path.">
-
-  <style>
-    .container{max-width:1100px;margin:0 auto;padding:0 20px;}
-    .page-header{padding:28px 0 6px;}
-    .page-content{padding:18px 0 56px;}
-    .back{display:inline-block;margin-bottom:14px;}
-    h1{margin:10px 0 8px;}
-    .subtitle{margin:0 0 18px;}
-    section{margin:22px 0;}
-  </style>
-
-  <link rel="stylesheet" href="/style.css">
+  <title>Autónomo setup in Spain</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
-
 <body>
   <div class="container">
     <header class="page-header">
