--- a/paperwork/index.html
+++ b/paperwork/index.html
@@ -2,22 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Paperwork help — Spain Starter Kit</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="English guidance for Spanish paperwork. Decide what to do yourself and when to use professional help.">
-
-  <!-- Fallback layout (prevents edge-to-edge text even if your main CSS is missing/partial) -->
-  <style>
-    .container{max-width:1100px;margin:0 auto;padding:0 20px;}
-    .page-header{padding:28px 0 6px;}
-    .page-content{padding:18px 0 56px;}
-    .back{display:inline-block;margin-bottom:14px;}
-    h1{margin:10px 0 8px;}
-    .subtitle{margin:0 0 18px;}
-    section{margin:22px 0;}
-  </style>
-
-  <link rel="stylesheet" href="/style.css">
+  <title>Autónomo setup in Spain</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
