--- a/paperwork/autonomo.html
+++ b/paperwork/autonomo.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <div class="container">
+  <div class="wrap">
     <header class="page-header">
       <a href="/paperwork/" class="back">← Back to Paperwork</a>
       <h1>Autónomo setup in Spain</h1>
