--- a/paperwork/nie-tie.html
+++ b/paperwork/nie-tie.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+ <div class="wrap">
   <header class="page-header">
     <a href="/" class="back">← Back to essentials</a>
     <h1>Paperwork help</h1>
@@ -56,6 +56,6 @@
       This site provides general guidance only and does not offer legal or tax advice.
     </p>
   </footer>
-
+ </div>
 </body>
 </html>
