--- a/paperwork/index.html
+++ b/paperwork/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="wrap">
     <header class="page-header">
       <a href="/" class="back">← Back to essentials</a>
       <h1>Paperwork help</h1>
