--- a/checklist/call.html
+++ b/checklist/call.html
@@ -170,25 +170,20 @@
       </div>
     </section>
 
+  <!-- PRICING -->
     <section class="section section-alt">
-      <h2>Pricing</h2>
+      <h2>Price</h2>
       <div class="grid">
         <article class="card call" style="grid-column: span 12; min-height: unset;">
           <div class="head">
-            <h3>49€ — 30 minutes</h3>
+            <h3>49 € — 30 minutes</h3>
             <span class="tag">Fixed</span>
           </div>
           <p>
-            A focused call designed to save you hours of confusion.
-            Fixed price, no upsell.
+            Payment and scheduling are arranged by email after you request the call.
           </p>
-          <div class="cta-row">
-            <!-- Replace with your payment/scheduling link -->
-            <a class="btn primary" href="#" target="_blank" rel="noopener">Pay & book (49€)</a>
-            <a class="btn" href="/paperwork/">See paperwork help</a>
-          </div>
           <p class="fineprint">
-            Payment link placeholder: replace the button URL with Stripe / Calendly / TidyCal / etc.
+            Payment methods: PayPal, Bizum or bank transfer.
           </p>
         </article>
       </div>
