--- a/checklist/call.html
+++ b/checklist/call.html
@@ -34,6 +34,11 @@
             A focused, paid call to help you choose the right path when moving to Spain:
             what to do yourself, what to delegate, and the correct order of steps.
           </p>
+          <a class="btn primary"
+   href="mailto:alex@kairu.tech?subject=Request%20for%2030-min%20paid%20call">
+  Email me to book a paid call
+</a>
+
 
           <div class="pillrow">
             <span class="pill">English-speaking</span>
