--- a/checklist/call.html
+++ b/checklist/call.html
@@ -182,6 +182,10 @@
             <h3>49 € — 30 minutes</h3>
             <span class="tag">Fixed</span>
           </div>
+                <a class="btn primary"
+   href="mailto:alex@kairu.tech?subject=Request%20for%2030-min%20paid%20call">
+  Pay & book (49€)
+</a>
           <p>
             Payment and scheduling are arranged by email after you request the call.
           </p>
