--- a/checklist/call.html
+++ b/checklist/call.html
@@ -179,13 +179,14 @@
       <div class="grid">
         <article class="card call" style="grid-column: span 12; min-height: unset;">
           <div class="head">
-            <h3>49 € — 30 minutes</h3>
+            <a class="btn primary"
+   href="mailto:alex@kairu.tech?subject=Request%20for%2030-min%20paid%20call">
+  Pay & book (49€ - 30 minutes)
+</a>
+           
             <span class="tag">Fixed</span>
           </div>
-                <a class="btn primary"
-   href="mailto:alex@kairu.tech?subject=Request%20for%2030-min%20paid%20call">
-  Pay & book (49€)
-</a>
+                
           <p>
             Payment and scheduling are arranged by email after you request the call.
           </p>
