--- a/checklist/call.html
+++ b/checklist/call.html
@@ -46,7 +46,9 @@
           <div class="cta-row">
             <!-- Replace with your payment/scheduling link -->
               <a class="btn primary"
-   href="mailto:alex@kairu.tech?subject=Request%20for%2030-min%20paid%20call">
+  href="mailto:alex@kairu.tech
+?subject=Request%20for%2030-min%20paid%20call
+&body=Hi%20Alex,%0D%0A%0D%0AI'd%20like%20to%20request%20a%20paid%2030-minute%20call.%0D%0A%0D%0APlease%20find%20my%20details%20below:%0D%0A%0D%0A1)%20Country%20of%20citizenship:%0D%0A2)%20Current%20location:%0D%0A3)%20Planned%20move%20date%20(or%20already%20in%20Spain):%0D%0A4)%20Work%20situation%20(employee%20/%20freelancer%20/%20other):%0D%0A5)%20Any%20urgent%20deadlines:%0D%0A%0D%0AThanks!">
   Pay & book (49€)
 </a>
            
@@ -180,7 +182,9 @@
         <article class="card call" style="grid-column: span 12; min-height: unset;">
           <div class="head">
             <a class="btn primary"
-   href="mailto:alex@kairu.tech?subject=Request%20for%2030-min%20paid%20call">
+href="mailto:alex@kairu.tech
+?subject=Request%20for%2030-min%20paid%20call
+&body=Hi%20Alex,%0D%0A%0D%0AI'd%20like%20to%20request%20a%20paid%2030-minute%20call.%0D%0A%0D%0APlease%20find%20my%20details%20below:%0D%0A%0D%0A1)%20Country%20of%20citizenship:%0D%0A2)%20Current%20location:%0D%0A3)%20Planned%20move%20date%20(or%20already%20in%20Spain):%0D%0A4)%20Work%20situation%20(employee%20/%20freelancer%20/%20other):%0D%0A5)%20Any%20urgent%20deadlines:%0D%0A%0D%0AThanks!">
   Pay & book (49€ - 30 minutes)
 </a>
            
