--- a/paperwork/index.html
+++ b/paperwork/index.html
@@ -9,8 +9,19 @@
 
 <body>
   <div class="wrap">
+    <div class="topbar" style="margin-bottom:18px;">
+  <a class="brand" href="/">
+    <span class="logo" aria-hidden="true"></span>
+    <span>SpainStarterKit</span>
+  </a>
+
+  <nav class="nav" aria-label="Primary">
+    <a href="/#essentials">Essentials</a>
+    <a href="/call/" class="btn" style="padding:10px 14px;">Book a Starter Call</a>
+  </nav>
+</div>
+
     <header class="page-header">
-      <a href="/" class="back">← Back to essentials</a>
       <h1>Paperwork help</h1>
       <p class="subtitle">DIY guidance when it’s simple. Professional help when it matters — in English.</p>
     </header>
