--- a/paperwork/autonomo.html
+++ b/paperwork/autonomo.html
@@ -8,8 +8,19 @@
 </head>
 <body>
   <div class="wrap">
+    <div class="topbar" style="margin-bottom:18px;">
+  <a class="brand" href="/">
+    <span class="logo" aria-hidden="true"></span>
+    <span>Spain Starter Kit</span>
+  </a>
+
+  <nav class="nav" aria-label="Primary">
+    <a href="/#essentials">Essentials</a>
+    <a href="/call/" class="btn" style="padding:10px 14px;">Book a Starter Call</a>
+  </nav>
+</div>
+
     <header class="page-header">
-      <a href="/paperwork/" class="back">← Back to Paperwork</a>
       <h1>Autónomo setup in Spain</h1>
       <p class="subtitle">If you’ll invoice from Spain, getting the setup right from day one matters.</p>
     </header>
